# Project

./: .gitignore  Cargo.toml  algorithms.rs  examples_testing.rs  main  main.rs  models.rs  output.csv
algorithms/: full_reducer.rs  gyo.rs  helper.rs  join_tree.rs  joins.rs  yannakakis.rs
examples_testing/: acyclic_queries_test.rs  database_loader_test.rs  full_reducer_test.rs  globally_consistent_db.rs  join_tree_test.rs  naturaljoin_test.rs  order_test.rs  yannakakis_test.rs
models/: query.rs
util/: loading.rs
