[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "49.0.0"
arrow-csv = "49.0.0"
csv = "1.3.0"
petgraph = "0.6.4"
regex = "1.10.2"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "project"
path = "main.rs"
